# amazon-sagemaker-automatic-deploy-mlflow-model

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
deployment_cicd_seed/: README.md  app.py  pyproject.toml  requirements.txt
deployment_cicd_seed/deployment_cicd/: deployment_cicd_stack.py  endpoint_deployment_stage.py  sagemaker_endpoint_construct.py  sagemaker_model_registry_utils.py  sagemaker_service_catalog_roles_construct.py
deployment_cicd_seed/deployment_cicd/config/: inference.yml
deployment_cicd_seed/tests/unit/: test_model_cicd_seed_stack.py
docker_images/python_function/: Dockerfile
lambdas/functions/create_model_diff/: lambda.py
lambdas/functions/create_webhook/: lambda.py
lambdas/functions/start_state_machine/: lambda.py
lambdas/functions/transfer_model/: lambda.py  utils.py
lambdas/functions/transfer_model/sklearn/: inference.py
lambdas/functions/transfer_model/xgboost/: inference.py  requirements.txt
lambdas/functions/update_model_stage/: lambda.py
lambdas/layers/mlflow/: requirements.txt
lambdas/layers/mlflow_webhooks/: pyproject.toml
lambdas/layers/sagemaker/: requirements.txt
mlflow_mlops/: custom_container_construct.py  mlflow_dockerfile.py  mlflow_mlops_stack.py  prepare_sagemaker_layer.py  product_stage.py  registry_sync_stage.py  service_catalog_utils.py
tests/unit/: test_mlflow_mlops_stack.py
