[tool.poetry]
name = "create_webhook"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
databricks-registry-webhooks = "^0.1.1"
crhelper = "^2.0.11"
jsonpickle = "^2.2.0"
protobuf = "^3.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
